@@ -1,3 +1,11 @@
+2010-07-14  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* include/DlvhexSolver.h: Updated to revised ASPSolver API.
+	* src/OpRelationMerging.cpp: Likewise.
+	* src/DlvhexSolver.cpp: Likewise.
+	* src/HexAnswerCache.cpp: Likewise.
+	* src/OpDalal.cpp: Likewise.
+
 2010-07-07  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* mpcompiler/src/Makefile.am: Added missing boost CPPFLAGS.
